--- a/gdb-katacoda/Dockerfile
+++ b/gdb-katacoda/Dockerfile
@@ -1,1 +1,8 @@
 from ubuntu:latest
+
+run apt-get update && apt-get upgrade -y
+run apt-get install -y build-essential gdb
+run apt-get install -y emacs
+
+run mkdir /workspace
+workdir /workspace
