adding support for x86

--- a/gdb-katacoda/Dockerfile
+++ b/gdb-katacoda/Dockerfile
@@ -1,8 +1,11 @@
-#syntax: docker run --cap-add=SYS_PTRACE --security-opt seccomp=unconfined -v $(pwd):/workspace -it daa82/gdb-katacoda /bin/bash
+##############################################################
+#IMAGE RUNNING SYNTAX: 
+# docker run --cap-add=SYS_PTRACE --security-opt seccomp=unconfined -v $(pwd):/workspace -it daa82/gdb-katacoda /bin/bash
+##############################################################
 from ubuntu:latest
 
 run apt-get update && apt-get upgrade -y
-run apt-get install -y build-essential gdb
+run apt-get install -y build-essential gcc-multilib gdb
 run apt-get install -y emacs
 
 #copy
